--- a/pages/login.html
+++ b/pages/login.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/login.css">
     <title>Document</title>
 </head>
 <body>
-    <div>
+  <div class = "h_header">
+    <a href="../index.html" class="logo">CompanyLogo</a>
+    <a href="./browse.html">Browse Categories</a>
+    <a href="../index.html">Blog</a>
+    <a href=".write.html">Write a Review</a>
+    <div class="header_right">
+      <a href="./login.html">Login</a>
+      <a href="./signup.html">Signup</a>
+      <a class="active" href="#home">ARE YOU A HOME PRO</a>
+    </div>
+</div>
+</div>
+    <div class = "login">
         <form action="action_page.php" method="post">
             <div class="imgcontainer">
               <img src="img_avatar2.png" alt="Avatar" class="avatar">
