--- a/pages/signup.html
+++ b/pages/signup.html
@@ -8,7 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+  <div class = "h_header">
+    <a href="../index.html" class="logo">CompanyLogo</a>
+    <a href="./browse.html">Browse Categories</a>
+    <a href="../index.html">Blog</a>
+    <a href=".write.html">Write a Review</a>
+    <div class="header_right">
+      <a href="./login.html">Login</a>
+      <a href="./signup.html">Signup</a>
+      <a class="active" href="#home">ARE YOU A HOME PRO</a>
+    </div>
+</div>
+</div>
+    <div class="signup">
         <form action="action_page.php" style="border:1px solid #ccc">
             <div class="container">
               <h1>Sign Up</h1>
