--- a/pages/write.html
+++ b/pages/write.html
@@ -8,6 +8,17 @@
     <title>Write A Review</title>
 </head>
 <body>
+    <div class = "h_header">
+        <a href="../index.html" class="logo">CompanyLogo</a>
+        <a href="./browse.html">Browse Categories</a>
+        <a href="../index.html">Blog</a>
+        <a href=".write.html">Write a Review</a>
+        <div class="header_right">
+          <a href="./login.html">Login</a>
+          <a href="./signup.html">Signup</a>
+          <a class="active" href="#home">ARE YOU A HOME PRO</a>
+        </div>
+    </div>
     <div>
         <h1>Search for a Company to Review</h1>
         <div class="sb-example-1">
